Ahora sí jala la búsqueda. Patito Patito

--- a/Pruebas/prueba1_1.bib
+++ b/Pruebas/prueba1_1.bib
@@ -23,6 +23,6 @@
   Experimental results on challenging reasoning benchmarks, including AIME and GPQA, 
   demonstrate that PANEL significantly enhances reasoning performance, outperforming 
   traditional scalar reward-based methods. Our code is available at 
-  https://github.com/puddingyeah/PANEL to support and encourage further 
+  this https URL to support and encourage further 
   research in this promising field.}
 }
